--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <img src="images/corridor1.jpg" alt="corridor1" class="mx-auto d-block">
             <img src="images/corridor2.jpg" alt="corridor2" class="mx-auto d-block">
 
-            <p>Fig <a href="#ref1">[1] </a>Image of corridor1 on top and corridor 2 on bottom. Blue lines were found with Hough transformation and the red spot shows the place of the vanishing point </p>
+            <p>Fig <a href="#ref1">[1] </a>Image of corridor1 and corridor 2. Blue lines were found with Hough transformation and the red spot shows the place of the vanishing point </p>
 
 
             <h3>2.VSLAM</h3>
